# web-rust

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  env.txt  watch.bat
migrations/: 20240917223406_vendas.sql  20240917224045_mock.sql
src/: app.rs  controller.rs  database.rs  error.rs  main.rs  models.rs  render.rs  result.rs  routes.rs  utils.rs  view.rs
static/: manifest.json
templates/: footer.html  index.html  layout.html  nav.html  view_vendas.html
